# TD_Muzero

./: .gitignore  README.md  cpp_trace_0.json  cpp_trace_42.json  engine.py  gui.py  play_ai.py  td_muzero.py  test_python_hp.py  trace_0.json  trace_42.json
.github/workflows/: apply-a3-discrete-timestep.yml  apply-replay-c1.yml  cpp-ci.yml
cpp/: CMakeLists.txt
cpp/apps/: bench_batch_sampler.cpp  bench_engine.cpp  bench_mcts.cpp  bench_observation.cpp  bench_replay_loader.cpp  bench_selfplay.cpp  bench_sequence_replay.cpp  engine_debug_gui_win32.cpp  export_attack_budget.cpp  export_budgeted_wave.cpp  export_cpp_trace.cpp  export_defense_capacity.cpp  export_engine_wave_modes.cpp  export_golden_traces.cpp  export_wave_mode_ab.cpp  generate_selfplay_dummy.cpp  generate_selfplay_shards.cpp  generate_selfplay_shards_v2.cpp  test_rng.cpp
cpp/include/tdmz/balance/: attack_budget.hpp  budgeted_wave_generator.hpp  defense_capacity.hpp
cpp/include/tdmz/core/: action.hpp  board_tables.hpp  compatibility.hpp  enemy.hpp  engine.hpp  golden_trace.hpp  observation.hpp  pathfinding.hpp  pending_spawn_queue.hpp  rng.hpp  tower.hpp  wave_mode.hpp
cpp/include/tdmz/mcts/: action_mask.hpp  dummy_network.hpp  edge_pool.hpp  mcts.hpp  mcts_config.hpp  minmax.hpp  network_evaluator.hpp  node.hpp  node_pool.hpp  search_output.hpp  search_results.hpp
cpp/include/tdmz/nn/: action_encoder.hpp  dynamics.hpp  legality_loss.hpp  libtorch_evaluator.hpp  muzero_network.hpp  network_config.hpp  network_output.hpp  prediction.hpp  representation.hpp
cpp/include/tdmz/persistence/: checkpoint_manifest.hpp
cpp/include/tdmz/selfplay/: game_history.hpp  replay_dataset.hpp  selfplay_config.hpp  selfplay_runner.hpp  training_replay.hpp  trajectory_writer.hpp  transition_shard.hpp
cpp/include/tdmz/training/: direct_sequence_replay.hpp  legality.hpp  sequence_replay.hpp
cpp/src/balance/: attack_budget.cpp  budgeted_wave_generator.cpp  defense_capacity.cpp
cpp/src/core/: action.cpp  board_tables.cpp  compatibility.cpp  enemy.cpp  engine.cpp  engine_actions.cpp  engine_board.cpp  engine_state.cpp  engine_tick.cpp  golden_trace.cpp  observation.cpp  pathfinding.cpp  rng.cpp  tower.cpp
cpp/src/mcts/: action_mask.cpp  mcts.cpp  mcts_mask.cpp
cpp/src/nn/: action_encoder.cpp  dynamics.cpp  legality_loss.cpp  libtorch_evaluator.cpp  muzero_network.cpp  prediction.cpp  representation.cpp
cpp/src/persistence/: checkpoint_manifest.cpp
cpp/src/selfplay/: replay_dataset.cpp  replay_dataset_v2.cpp  selfplay_runner.cpp  training_replay.cpp  trajectory_writer.cpp  transition_shard.cpp
cpp/src/training/: direct_sequence_replay.cpp  legality.cpp  sequence_replay.cpp
cpp/tests/: CMakeLists.txt  test_action_mask.cpp  test_attack_budget.cpp  test_binary_trajectory.cpp  test_board_tables.cpp  test_budgeted_wave_generator.cpp  test_checkpoint_manifest.cpp  test_defense_capacity.cpp  test_direct_sequence_replay.cpp  test_enemy.cpp  test_engine.cpp  test_engine_wave_modes.cpp  test_game_logic.cpp  test_golden_trace.cpp  test_legality_loss.cpp  test_legality_training.cpp  test_legality_transport.cpp  test_mcts.cpp  test_mcts_batched_inference.cpp  test_mcts_libtorch_smoke.cpp  test_mcts_scratch_reuse.cpp  test_network_shape.cpp  test_observation_cache.cpp  test_pending_spawn_queue.cpp  test_replay_dataset.cpp  test_selfplay.cpp  test_selfplay_libtorch.cpp  test_sequence_replay.cpp  test_timing_semantics.cpp  test_training_replay.cpp  test_transition_shard.cpp
docs/: code_semantics_audit_2026-07-12.md  cpp_fix_plan_2026-07-10.md  engine_debug_gui.md  tdmuzero_semantics_repair_plan.md
muzero-general/: models.py  trainer.py
muzero-general/games/: engine.py  td_muzero.py
tools/: export_python_trace.py  verify_traces.py
