add_executable(test_engine test_engine.cpp)
target_link_libraries(test_engine tdmz_core)
add_test(NAME test_engine COMMAND test_engine)

add_executable(test_enemy test_enemy.cpp)
target_link_libraries(test_enemy tdmz_core)
add_test(NAME test_enemy COMMAND test_enemy)

add_executable(test_timing_semantics test_timing_semantics.cpp)
target_link_libraries(test_timing_semantics tdmz_core)
add_test(NAME test_timing_semantics COMMAND test_timing_semantics)

add_executable(test_pending_spawn_queue test_pending_spawn_queue.cpp)
target_link_libraries(test_pending_spawn_queue tdmz_core)
add_test(NAME test_pending_spawn_queue COMMAND test_pending_spawn_queue)

add_executable(test_action_mask test_action_mask.cpp)
target_link_libraries(test_action_mask tdmz_core)
add_test(NAME test_action_mask COMMAND test_action_mask)

add_executable(test_board_tables test_board_tables.cpp)
target_link_libraries(test_board_tables tdmz_core)
add_test(NAME test_board_tables COMMAND test_board_tables)

add_executable(test_game_logic test_game_logic.cpp)
target_link_libraries(test_game_logic tdmz_core)
add_test(NAME test_game_logic COMMAND test_game_logic)

add_executable(test_golden_trace test_golden_trace.cpp)
target_link_libraries(test_golden_trace tdmz_core)
add_test(NAME test_golden_trace COMMAND test_golden_trace)

add_executable(test_defense_capacity test_defense_capacity.cpp)
target_link_libraries(test_defense_capacity tdmz_core)
add_test(NAME test_defense_capacity COMMAND test_defense_capacity)

add_executable(test_attack_budget test_attack_budget.cpp)
target_link_libraries(test_attack_budget tdmz_core)
add_test(NAME test_attack_budget COMMAND test_attack_budget)

add_executable(test_budgeted_wave_generator test_budgeted_wave_generator.cpp)
target_link_libraries(test_budgeted_wave_generator tdmz_core)
add_test(NAME test_budgeted_wave_generator COMMAND test_budgeted_wave_generator)

add_executable(test_engine_wave_modes test_engine_wave_modes.cpp)
target_link_libraries(test_engine_wave_modes tdmz_core)
add_test(NAME test_engine_wave_modes COMMAND test_engine_wave_modes)

add_executable(test_observation_cache test_observation_cache.cpp)
target_link_libraries(test_observation_cache tdmz_core)
add_test(NAME test_observation_cache COMMAND test_observation_cache)

add_executable(test_binary_trajectory test_binary_trajectory.cpp)
target_link_libraries(test_binary_trajectory tdmz_core)
add_test(NAME test_binary_trajectory COMMAND test_binary_trajectory)

add_executable(test_transition_shard test_transition_shard.cpp)
target_link_libraries(test_transition_shard tdmz_core)
add_test(NAME test_transition_shard COMMAND test_transition_shard)

add_executable(test_replay_dataset test_replay_dataset.cpp)
target_link_libraries(test_replay_dataset tdmz_core)
add_test(NAME test_replay_dataset COMMAND test_replay_dataset)

add_executable(test_training_replay test_training_replay.cpp)
target_link_libraries(test_training_replay tdmz_core)
add_test(NAME test_training_replay COMMAND test_training_replay)

add_executable(test_legality_training test_legality_training.cpp)
target_link_libraries(test_legality_training tdmz_core)
add_test(NAME test_legality_training COMMAND test_legality_training)

add_executable(test_sequence_replay test_sequence_replay.cpp)
target_link_libraries(test_sequence_replay tdmz_core)
add_test(NAME test_sequence_replay COMMAND test_sequence_replay)

add_executable(test_direct_sequence_replay test_direct_sequence_replay.cpp)
target_link_libraries(test_direct_sequence_replay tdmz_core)
add_test(NAME test_direct_sequence_replay COMMAND test_direct_sequence_replay)

add_executable(test_checkpoint_manifest test_checkpoint_manifest.cpp)
target_link_libraries(test_checkpoint_manifest tdmz_core)
add_test(NAME test_checkpoint_manifest COMMAND test_checkpoint_manifest)

add_executable(test_mcts test_mcts.cpp)
target_link_libraries(test_mcts tdmz_core)
add_test(NAME test_mcts COMMAND test_mcts)

add_executable(test_legality_transport test_legality_transport.cpp)
target_link_libraries(test_legality_transport tdmz_core)
add_test(NAME test_legality_transport COMMAND test_legality_transport)

add_executable(test_mcts_scratch_reuse test_mcts_scratch_reuse.cpp)
target_link_libraries(test_mcts_scratch_reuse tdmz_core)
add_test(NAME test_mcts_scratch_reuse COMMAND test_mcts_scratch_reuse)

add_executable(test_mcts_batched_inference test_mcts_batched_inference.cpp)
target_link_libraries(test_mcts_batched_inference tdmz_core)
add_test(NAME test_mcts_batched_inference COMMAND test_mcts_batched_inference)

add_executable(test_selfplay test_selfplay.cpp)
target_link_libraries(test_selfplay tdmz_core)
add_test(NAME test_selfplay COMMAND test_selfplay)

if(TDMZ_ENABLE_TORCH)
    add_executable(test_network_shape test_network_shape.cpp)
    target_link_libraries(test_network_shape tdmz_nn)
    add_test(NAME test_network_shape COMMAND test_network_shape)

    add_executable(test_legality_loss test_legality_loss.cpp)
    target_link_libraries(test_legality_loss tdmz_nn)
    add_test(NAME test_legality_loss COMMAND test_legality_loss)

    add_executable(test_mcts_libtorch_smoke test_mcts_libtorch_smoke.cpp)
    target_link_libraries(test_mcts_libtorch_smoke tdmz_nn)
    add_test(NAME test_mcts_libtorch_smoke COMMAND test_mcts_libtorch_smoke)

    add_executable(test_selfplay_torch test_selfplay_libtorch.cpp)
    target_link_libraries(test_selfplay_torch tdmz_nn)
    add_test(NAME test_selfplay_torch COMMAND test_selfplay_torch)
endif()
